align list center; fix random int

--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,7 @@
 body {
 	background-color: #ddd;
 	color: #022;
-	max-width: 1000px;
+	max-width: 800px;
 	margin: auto;
 }
 
@@ -11,6 +11,7 @@ a {
 
 p#link_list {
 	font-family: monospace;
+	text-align: center;
 }
 
 div#faq, div#about {
